# duckdb_excel

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/excel/: excel_config.py  excel_extension.cpp
src/excel/include/xlsx/: read_xlsx.hpp  string_table.hpp  xlsx_parts.hpp  xlsx_writer.hpp  xml_parser.hpp  xml_util.hpp  zip_file.hpp
src/excel/include/xlsx/parsers/: content_types_parser.hpp  relationship_parser.hpp  shared_strings_parser.hpp  stylesheet_parser.hpp  workbook_parser.hpp  worksheet_parser.hpp
src/excel/numformat/: nf_calendar.cpp  nf_localedata.cpp  nf_zformat.cpp
src/excel/xlsx/: copy_xlsx.cpp  read_xlsx.cpp  write_xlsx.cpp  zip_file.cpp
test/data/xlsx/: basic.xlsx  header_only.xlsx  time_data_with_blanks.xlsx  time_data_with_blanks_no_leading_zero.xlsx
test/data/xlsx/gdal/: LICENSE.md
test/sql/excel/: test_excel_numformat.test
test/sql/excel/xlsx/: bignum.test  collapsed_cells.test  gdal.test  header_only.test  limits.test  range.test  read_basic.test  read_big.test  read_sparse.test  roundtrip_bool.test  roundtrip_header.test  roundtrip_sheet_name.test  roundtrip_time.test  two_sheets.test  xlsx_test_all_types.test
test/sql/excel/xlsx/tpch/: tpch.test
vcpkg_ports/expat/: portfile.cmake
vcpkg_ports/minizip-ng/: portfile.cmake
vcpkg_ports/zlib/: portfile.cmake
